[pom] Update jmockit to 1.44