@@ -93,7 +93,7 @@
     <properties>
         <c3p0.version>0.9.5.2</c3p0.version>
         <javabean-tester.version>2.1.1</javabean-tester.version>
-        <jmockit.version>1.41</jmockit.version> <!-- TODO: 42 breaks -->
+        <jmockit.version>1.44</jmockit.version>
         <junit.version>5.3.2</junit.version>
         <ojdbc.version>18.3.0.0</ojdbc.version>
         <servlet.version>4.0.1</servlet.version>
@@ -105,6 +105,8 @@
         <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
 
         <signature.artifact>java18</signature.artifact>
+
+        <argLine>-javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar -Djdk.attach.allowAttachSelf</argLine>
     </properties>
 
     <repositories>
